fetching json is okay formatting and using it is the problem today

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      <audio id="audio" preload="metadata"/>
      
      <div class="img-container ">
-       <img id="cover" src="images/Folder.jpg" alt="album photo" />
+       <img id="cover" src="images/No_images.jpg" alt="album photo" />
      </div>
      
      <div class="navigation">
