playable music player | problem is it doesnt not work on seperate json file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="music-container">
     
      <div class="music-info">
-       <h4 id="title"></h4>
+       <marquee><h4 id="title"></h4></marquee>
        <div class="progress-container">
          <div class="progress"></div>
        </div>
