--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>GreenDay Music Player</title>
-  <!-- Custom Styles -->
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
-  <link rel="stylesheet" href="style.css" defer>
+ 
+
 </head>
 
 <body>
-  
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" defer/>
   <h1>GreenDay Music Player</h1>
   
   <div class="music-container">
@@ -51,6 +50,7 @@
   
 
   <!-- Project -->
+  <link rel="stylesheet" href="style.css" defer>
   <script src="main.js" defer></script>
 </body>
 </html>
